tests/NormalTests/paczka1/small_fuzzy/83327729.err
Error in line 3: l8xE S4 21,3
Error in line 15: 6»LrfByta A336 99,6
